--- a/P7.ipynb
+++ b/P7.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,135 @@
     "    #M=D    save D into M\n",
     "    #@SP    go back to pointer\n",
     "    #M=M+1  index pointer to be next addr\n",
-    "    return \"@SP,A=M,M=D,@SP,M=M+1\"\n",
+    "    return \"@SP,A=M,M=D,@SP,M=M+1,\"\n",
     "\n",
     "def getPopD():\n",
     "    #@SP \n",
     "    #M = M-1 index SP down 1\n",
     "    #A = M   go to new SP address\n",
     "    #D = M   save val in there to D\n",
-    "    return \"@SP,M=M-1,A=M,D=M\""
+    "    return \"@SP,M=M-1,A=M,D=M,\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pointerSeg(pushpop,seg,index):\n",
+    "    \"\"\" This function returns Hack ML code to push a memory location to \n",
+    "    to the stack, or pop the stack to a memory location. \n",
+    "\n",
+    "    INPUTS:\n",
+    "        pushpop = a text string 'pop' means pop to memory location, 'push' \n",
+    "                  is push memory location onto stack\n",
+    "        seg     = the name of the segment that will be be the base address\n",
+    "                  in the form of a text string\n",
+    "        index   = an integer that specifies the offset from the base \n",
+    "                  address specified by seg\n",
+    "\n",
+    "    RETURN: \n",
+    "        The memory address is speficied by segment's pointer (SEGLABEL[seg]) + index (index))\n",
+    "        if pushpop is 'push', push the address contents to the stack\n",
+    "        if pushpop is 'pop' then pop the stack to the memory address.\n",
+    "        The string returned accomplishes this. ML commands are seperated by commas (,).\n",
+    "\n",
+    "    NOTE: This function will only be called if the seg is one of:\n",
+    "    \"local\", \"argument\", \"this\", \"that\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dict1 = {\"local\": \"@LCL,\", \"argument\": \"@ARG,\", \"this\": \"@THIS,\", \"that\": \"@THAT,\"}\n",
+    "    # dict2 = {\"constant\":, \"static\":}\n",
+    "    # dcit3 = {\"pointer\":, \"temp\":}\n",
+    "\n",
+    "    ans = \"@\" + str(index) + \",D=A,\"\n",
+    "\n",
+    "    if seg in dict1:\n",
+    "        #those are pointers, meaning the RAM address associated with them in the symbol table contains\n",
+    "        # a RAM address where the SEGMENT begins. INDEX specifies where to go in the SEGMENT.\n",
+    "        \n",
+    "        if pushpop == 'push':\n",
+    "            #@index\n",
+    "            #D=A\n",
+    "            #@seg\n",
+    "            #D=D+M  #Now at @seg + index\n",
+    "\n",
+    "            #getPushD()\n",
+    "\n",
+    "            ans = ans + dict1.get(seg)+\"D=D+M,\" + getPushD()\n",
+    "            return ans\n",
+    "\n",
+    "        elif pushpop == 'pop':\n",
+    "            #@index\n",
+    "            #D=A\n",
+    "\n",
+    "            #@seg\n",
+    "            #D=D+M   #Now at @seg + index\n",
+    "            #@R13\n",
+    "            #M=D     #store value temp\n",
+    "\n",
+    "            #getPopD()    \n",
+    "\n",
+    "            #@R13    \n",
+    "            #A=M\n",
+    "            #M=D\n",
+    "\n",
+    "            ans = ans + dict1.get(seg) + \"D=D+M,@R13,M=D,\" + getPopD() + \"@R13,A=M,M=D,\"\n",
+    "\n",
+    "            return ans\n",
+    "\n",
+    "    # elif seg in :\n",
+    "        #Then something special occurs, in this case it is more akin to direct manipulation of the \n",
+    "        # value in INDEX onto or off of the stack.\n",
+    "        # pass\n",
+    "\n",
+    "\n",
+    "    # elif seg in [\"pointer\", \"temp\"]:\n",
+    "        #Here, the values in the memory address specified by the segment are defined, 3 and 5 \n",
+    "        # respectively and not indirectly specified pointers.\n",
+    "        # pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing\n",
+      "-------------------------------------\n",
+      "\n",
+      "Pushes\n",
+      "case 1: pointerSeg('push','local',3) True\n",
+      "case 1: pointerSeg('push','argument',5) True\n",
+      "case 1: pointerSeg('push','this',7) True\n",
+      "case 1: pointerSeg('push','that',9) True\n",
+      "\n",
+      "Pops\n",
+      "case 1: pointerSeg('pop','local',3) True\n",
+      "case 1: pointerSeg('pop','argument',5) True\n",
+      "case 1: pointerSeg('pop','this',7) True\n",
+      "case 1: pointerSeg('pop','that',9) True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Testing\\n-------------------------------------\")\n",
+    "print(\"\\nPushes\")\n",
+    "print(\"case 1: pointerSeg('push','local',3)\", pointerSeg(\"push\",\"local\",3) == \"@3,D=A,@LCL,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "print(\"case 1: pointerSeg('push','argument',5)\", pointerSeg(\"push\",\"argument\",5) == \"@5,D=A,@ARG,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "print(\"case 1: pointerSeg('push','this',7)\", pointerSeg(\"push\",\"this\",7) == \"@7,D=A,@THIS,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "print(\"case 1: pointerSeg('push','that',9)\", pointerSeg(\"push\",\"that\",9) == \"@9,D=A,@THAT,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "\n",
+    "print(\"\\nPops\")\n",
+    "print(\"case 1: pointerSeg('pop','local',3)\", pointerSeg(\"pop\",\"local\",3) == \"@3,D=A,@LCL,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
+    "print(\"case 1: pointerSeg('pop','argument',5)\", pointerSeg(\"pop\",\"argument\",5) == \"@5,D=A,@ARG,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
+    "print(\"case 1: pointerSeg('pop','this',7)\", pointerSeg(\"pop\",\"this\",7) == \"@7,D=A,@THIS,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
+    "print(\"case 1: pointerSeg('pop','that',9)\", pointerSeg(\"pop\",\"that\",9) == \"@9,D=A,@THAT,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n"
    ]
   },
   {
@@ -40,8 +161,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
