--- a/P7.ipynb
+++ b/P7.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
     "\n",
     "            #getPushD()\n",
     "\n",
-    "            ans = ans + dict1.get(seg)+\"D=D+M,\" + getPushD()\n",
+    "            ans = ans + dict1.get(seg) + \"A=M,A=A+D,D=M,\" + getPushD()\n",
     "            return ans\n",
     "\n",
     "        elif pushpop == 'pop':\n",
@@ -95,8 +95,7 @@
     "            #A=M\n",
     "            #M=D\n",
     "\n",
-    "            ans = ans + dict1.get(seg) + \"D=D+M,@R13,M=D,\" + getPopD() + \"@R13,A=M,M=D,\"\n",
-    "\n",
+    "            ans = ans + dict1.get(seg) + \"A=D+M,D=M,@R13,M=D,\" + getPopD() + \"@R13,A=M,M=D,\"\n",
     "            return ans\n",
     "\n",
     "    # elif seg in :\n",
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -125,31 +124,52 @@
       "\n",
       "Pushes\n",
       "case 1: pointerSeg('push','local',3) True\n",
-      "case 1: pointerSeg('push','argument',5) True\n",
-      "case 1: pointerSeg('push','this',7) True\n",
-      "case 1: pointerSeg('push','that',9) True\n",
+      "case 2: pointerSeg('push','argument',5) True\n",
+      "case 3: pointerSeg('push','this',7) True\n",
+      "case 4: pointerSeg('push','that',9) True\n",
       "\n",
       "Pops\n",
       "case 1: pointerSeg('pop','local',3) True\n",
-      "case 1: pointerSeg('pop','argument',5) True\n",
-      "case 1: pointerSeg('pop','this',7) True\n",
-      "case 1: pointerSeg('pop','that',9) True\n"
+      "case 2: pointerSeg('pop','argument',5) True\n",
+      "case 3: pointerSeg('pop','this',7) True\n",
+      "case 4: pointerSeg('pop','that',9) True\n"
      ]
     }
    ],
    "source": [
     "print(\"Testing\\n-------------------------------------\")\n",
     "print(\"\\nPushes\")\n",
-    "print(\"case 1: pointerSeg('push','local',3)\", pointerSeg(\"push\",\"local\",3) == \"@3,D=A,@LCL,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
-    "print(\"case 1: pointerSeg('push','argument',5)\", pointerSeg(\"push\",\"argument\",5) == \"@5,D=A,@ARG,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
-    "print(\"case 1: pointerSeg('push','this',7)\", pointerSeg(\"push\",\"this\",7) == \"@7,D=A,@THIS,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
-    "print(\"case 1: pointerSeg('push','that',9)\", pointerSeg(\"push\",\"that\",9) == \"@9,D=A,@THAT,D=D+M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "print(\"case 1: pointerSeg('push','local',3)\", pointerSeg(\"push\",\"local\",3) == \"@3,D=A,@LCL,A=M,A=A+D,D=M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "print(\"case 2: pointerSeg('push','argument',5)\", pointerSeg(\"push\",\"argument\",5) == \"@5,D=A,@ARG,A=M,A=A+D,D=M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "print(\"case 3: pointerSeg('push','this',7)\", pointerSeg(\"push\",\"this\",7) == \"@7,D=A,@THIS,A=M,A=A+D,D=M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
+    "print(\"case 4: pointerSeg('push','that',9)\", pointerSeg(\"push\",\"that\",9) == \"@9,D=A,@THAT,A=M,A=A+D,D=M,@SP,A=M,M=D,@SP,M=M+1,\")\n",
     "\n",
     "print(\"\\nPops\")\n",
-    "print(\"case 1: pointerSeg('pop','local',3)\", pointerSeg(\"pop\",\"local\",3) == \"@3,D=A,@LCL,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
-    "print(\"case 1: pointerSeg('pop','argument',5)\", pointerSeg(\"pop\",\"argument\",5) == \"@5,D=A,@ARG,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
-    "print(\"case 1: pointerSeg('pop','this',7)\", pointerSeg(\"pop\",\"this\",7) == \"@7,D=A,@THIS,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
-    "print(\"case 1: pointerSeg('pop','that',9)\", pointerSeg(\"pop\",\"that\",9) == \"@9,D=A,@THAT,D=D+M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n"
+    "print(\"case 1: pointerSeg('pop','local',3)\", pointerSeg(\"pop\",\"local\",3) == \"@3,D=A,@LCL,A=D+M,D=M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
+    "print(\"case 2: pointerSeg('pop','argument',5)\", pointerSeg(\"pop\",\"argument\",5) == \"@5,D=A,@ARG,A=D+M,D=M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
+    "print(\"case 3: pointerSeg('pop','this',7)\", pointerSeg(\"pop\",\"this\",7) == \"@7,D=A,@THIS,A=D+M,D=M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n",
+    "print(\"case 4: pointerSeg('pop','that',9)\", pointerSeg(\"pop\",\"that\",9) == \"@9,D=A,@THAT,A=D+M,D=M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'@3,D=A,@LCL,A=D+M,D=M,@R13,M=D,@SP,M=M-1,A=M,D=M,@R13,A=M,M=D,'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(pointerSeg('push', 'local', 3))\n",
+    "print(pointerSeg('pop', 'local', 3))"
    ]
   },
   {
@@ -176,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
